--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
       </div>
     </main>
 
+<link rel="shortcut icon" type="image/png" href="play/favicon.png">
+          
     {%- if site.soopr -%}
       {%- if site.soopr.publish_token and jekyll.environment == "production" -%}
         <script async defer data-soopr-token="{{site.soopr.publish_token}}" src="https://sdk.soopr.co/soopr.js"></script>
